--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,19 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <!-- button text -->
+    <string name="btn_take_photo">Take a photo</string>
+    <string name="btn_send">Send</string>
+
+    <!-- content description -->
+    <string name="content_description_chosen_image">chosen image</string>
+
+    <!-- error message -->
+    <string name="error_take_photo">Error occurred.</string>
+
+    <!-- permission -->
+
+    <string name="permission_neverask">Needed permissions were denied with never ask again.</string>
+    <string name="permission_denied">Needed permissions were denied. Please consider granting them in order to use the demo!</string>
+
 </resources>
