--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,7 @@
     <string name="match_found">Match found: %s.</string>
     <string name="about_app">Xebienza-Oxford is a straightforward sample to demonstrate the Oxford\'s capabilities on mobile device. Take a selfie with someone to know about him / her.</string>
     <string name="collaboration">Collaboration of</string>
+    <string name="drawer_about">About</string>
+    <string name="drawer_demo">Demo</string>
 
 </resources>
