--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <!-- button text -->
-    <string name="btn_take_photo">TAKE A PHOTO</string>
+    <string name="btn_take_photo">TAKE A SELFIE</string>
     <string name="btn_match">Match</string>
     <string name="btn_select_from_gallery">CHOOSE AN IMAGE</string>
 
